k8s/slurm/slurm-learn-base2/daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: node-exporter
  name: node-exporter
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      containers:
        - args:
          - --web.listen-address=0.0.0.0:9101
          - --path.procfs=/host/proc
          - --path.sysfs=/host/sys
          - --collector.filesystem.ignored-mount-points=^/(dev|proc|sys|var/lib/docker/.+)($|/)
          - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|sysfs|tracefs)$
          image: quay.io/prometheus/node-exporter:v0.16.0
          imagePullPolicy: IfNotPresent
          name: node-exporter
          volumeMounts:
            - mountPath: /host/proc
              name: proc
            - mountPath: /host/sys
              name: sys
            - mountPath: /host/root
              name: root
              readOnly: true
      hostNetwork: true #пробросить сетевой интерфейс узла (будет доступен 9101 порт)
      hostPID: true  #pid узла
      nodeSelector: #Запускать только если на node есть  метка
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true #run without root
        runAsUser: 65534
      tolerations:
        - effect: NoSchedule
          operator: Exists #all nodes
          # key: node-role.kubernetes.io/master #запускаться на мастерах тоже
      volumes:
        - hostPath:
            path: /proc
            type: ""
          name: proc
        - hostPath:
            path: /sys
            type: ""
          name: sys
        - hostPath:
            path: /
            type: ""
          name: root #доступ ко всем процесса и системным файлам node
