k8s/slurm/slurm-learn-base2/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: my-app
  type: ClusterIP
